clang/test/BSC/Negative/Generic/InvalidTemplateParameters/do_not_crash9.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

}a<[b>(;
// expected-error@-1 {{extraneous closing brace ('}')}}
// expected-error@-2 {{expected expression}}
// expected-error@-3 {{use of undeclared identifier 'b'}}
// expected-error@-4 {{expected template parameter}}
// expected-error@-5 {{expected ',' or '>' in template-parameter-list}}
// expected-error@-6 {{expected '>'}}
